--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>banner-hero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/hero-banner.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
 
   <div class="banner">
-    <img src="images/placeholder-16by9.svg">
+    <img src="images/placeholder-16by9.svg" alt="">
     <div class="banner-content">
       <h1>Giant space moths invade Earth</h1>
       <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
   </div>
-
 
   </body>
 </html>
