--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-  <head>
-    <meta charset="utf-8">
-    <title>banner-hero</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>banner-hero</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+<body>
 
   <div class="banner">
-    <img src="images/placeholder-16by9.svg" alt="">
+    <h2 class="img-flex"><img src="images/placeholder-16by9.svg" alt=""></h2>
     <div class="banner-content">
       <h1>Giant space moths invade Earth</h1>
       <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
   </div>
 
-  </body>
+</body>
 </html>
