--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <div class="banner">
-    <h2 class="img-flex"><img src="images/placeholder-16by9.svg" alt=""></h2>
+    <h2><img class="img-flex" src="images/placeholder-16by9.svg" alt=""></h2>
     <div class="banner-content">
-      <h1>Giant space moths invade Earth</h1>
+      <h1><span>Giant space moths invade Earth</span></h1>
       <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
   </div>
